--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "parceiros",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.13.1",
+    "yarn": "1.22.17"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
