--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
+/.vscode
 /.pnp
 .pnp.js
 
@@ -21,3 +20,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.env
+package-lock.json
+yarn.lock
+.gitattributes
+.gitignore
