--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "parceiros",
   "version": "0.1.0",
-  "engines": {
-    "node": "16.13.1",
-    "yarn": "1.22.17"
-  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -18,7 +14,7 @@
     "react-hot-loader": "^4.13.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.3",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
